# bigbird

./: .dockerignore  .gitignore  .gitmodules  CITATION.cff  Dockerfile  README.md  compose.yaml  justfile  pyproject.toml  reproduce.sh  rust-toolchain.toml
bigbird/: README.md  common.py  metrics.py
bigbird/datasets/criteo/: cli.py  constants.py  preprocess.py
bigbird/plots/: axis.py  causes.py  cli.py  combined.py  figures.py  load.py  style.py  sweep.py  systems.py
bigbirdeval/: Cargo.toml  log4rs.yaml
bigbirdeval/src/: common_types.rs  config.rs  experiments.rs  main.rs  progress.rs  querier.rs  uriset_localizer.rs  util.rs
bigbirdeval/src/attacks/: attack_b.rs  attack_c.rs  attack_trait.rs  no_attack.rs  scaffold.rs
bigbirdeval/src/datasets/: criteo.rs  dataset_trait.rs
bigbirdeval/src/logs/: logfile.rs  logger.rs
bigbirdeval/src/runtimes/: device_storage.rs  online.rs  stats_collector.rs
docs/: EXTENDING.md
firefox-prototype/: README.md
notebooks/: criteo_stats.py  fig_0_workload_epsilon.py  gen_heavy_convsites_json.py
scripts/: collect_figures.py  run_experiments.py  smoke.sh
